Full documentation: http://jonreid.github.com/OCHamcrest/
Latest sources: https://github.com/jonreid/OCHamcrest
Hamcrest information: http://code.google.com/p/hamcrest/

== NEXT VERSION IN PROGRESS

* Fixed iOS simulator crash when trying to describe an object with nil description.

* Packaging:
 -  Updated project to Xcode 4. iOS framework / documentation / distribution scripts are now external, run from command-line instead of Xcode.
 - Improved documentation by adding Factory headings pointing from implementing classes back to their factories.

* New matcher:
 - "stringContainsInOrder" matches string containing given list of substrings, in order.

* Improved matchers:
 - Changed sameInstance mismatch description to omit 0x0 address when describing nil argument.


== Version 1.4 ==

13 Feb 2011
* New matchers:
 - "hasEntries" matches dictionary containing key-value pairs satisfying a given list of alternating keys and value matchers.

* Added complete descriptions to macros so they appear in Xcode 4 Quick Help. (Couldn't add arguments to macros without breaking backwards compatibility.)

* Improved descriptions:
 - Improved description of "hasEntry", removing colon so it doesn't get truncated in Xcode's error display.
 - "is" no longer says "is ..." in its description, but just lets the inner description pass through.
 - Consistently use articles to begin descriptions, such as "a dictionary containing" instead of "dictionary containing".


== Version 1.3 ==

05 Jan 2011
* Improved descriptions and mismatch descriptions of several matchers, including:
  - Fixed "contains" and "containsInAnyOrder" to describe mismatch if item is not a collection.
  - Fixed "describedAs" and "is" to use their nested matchers to generate mismatch descriptions.
  - "sameInstance" is more readable, and includes object memory addresses.
  - If object has a count, "hasCount" mismatch describes actual count.
  - Don't wrap angle brackets around a description that already has them.