@@ -72,11 +72,11 @@
 
 #pragma mark -
 
-OBJC_EXPORT id<HCMatcher> HC_allOf(id<HCMatcher> matcher, ...)
+OBJC_EXPORT id<HCMatcher> HC_allOf(id item, ...)
 {
     va_list args;
-    va_start(args, matcher);
-    NSArray *matcherList = HCCollectMatchers(matcher, args);
+    va_start(args, item);
+    NSArray *matcherList = HCCollectMatchers(item, args);
     va_end(args);
     
     return [HCAllOf allOf:matcherList];
