@@ -56,11 +56,11 @@
 
 #pragma mark -
 
-OBJC_EXPORT id<HCMatcher> HC_anyOf(id<HCMatcher> matcher, ...)
+OBJC_EXPORT id<HCMatcher> HC_anyOf(id item, ...)
 {
     va_list args;
-    va_start(args, matcher);
-    NSArray *matcherList = HCCollectMatchers(matcher, args);
+    va_start(args, item);
+    NSArray *matcherList = HCCollectMatchers(item, args);
     va_end(args);
     
     return [HCAnyOf anyOf:matcherList];
