@@ -17,4 +17,4 @@
     Returns an array of matchers from a variable-length comma-separated list terminated by @c nil.
     @ingroup helpers
 */
-OBJC_EXPORT NSMutableArray *HCCollectMatchers(id<HCMatcher> matcher1, va_list args);
+OBJC_EXPORT NSMutableArray *HCCollectMatchers(id item1, va_list args);
