@@ -12,6 +12,9 @@
 
 OBJC_EXPORT id<HCMatcher> HCWrapInMatcher(id matcherOrValue)
 {
+    if (!matcherOrValue)
+        return nil;
+    
     if ([matcherOrValue conformsToProtocol:@protocol(HCMatcher)])
         return matcherOrValue;
     else
