@@ -4,7 +4,7 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 == NEXT VERSION IN PROGRESS
 
-* Fixed iOS simulator crash when trying to describe an object with nil description.
+* Fixed crash when trying to describe an object with nil description.
 
 * Packaging:
  -  Updated project to Xcode 4. iOS framework / documentation / distribution scripts are now external, run from command-line instead of Xcode.
@@ -14,7 +14,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
  - "stringContainsInOrder" matches string containing given list of substrings, in order.
 
 * Improved matchers:
- - Changed sameInstance mismatch description to omit 0x0 address when describing nil argument.
+ - Changed "sameInstance" mismatch description to omit address when describing nil.
+ - For consistency, changed "anyOf" and "allOf" to implicitly wrap non-matcher values in equalTo.
 
 
 == Version 1.4 ==
